RESOLVED FIXED30171
fast/dom/Window/window-postmessage-clone.html fails on Windows
https://bugs.webkit.org/show_bug.cgi?id=30171
Summary fast/dom/Window/window-postmessage-clone.html fails on Windows
Adam Roben (:aroben)
Reported 2009-10-07 09:22:10 PDT
fast/dom/Window/window-postmessage-clone.html has been failing on Windows since it was added. Apparently the Date object is getting converted to a vanilla Object when passed through postMessage.
Attachments
Export DateInstance::info in a way that works on Windows (2.79 KB, patch)
2009-10-07 09:47 PDT, Adam Roben (:aroben)
mitz: review+
Adam Roben (:aroben)
Comment 1 2009-10-07 09:24:04 PDT
It looks like this test is failing: if (value.isObject() && asObject(value)->inherits(&DateInstance::info)) return SerializedScriptValueData(SerializedScriptValueData::DateType, asDateInstance(value)->internalNumber()); <http://trac.webkit.org/browser/trunk/WebCore/bindings/js/SerializedScriptValue.cpp?rev=49216#L478> It seems that &DateInstance::info in WebCore and &DateInstance::info in JSC don't return the same pointer, so the inherits() test fails. I think this is a linking problem.
Adam Roben (:aroben)
Comment 2 2009-10-07 09:38:09 PDT
I think I have a fix.
Adam Roben (:aroben)
Comment 3 2009-10-07 09:47:09 PDT
Created attachment 40799 [details] Export DateInstance::info in a way that works on Windows
Adam Roben (:aroben)
Comment 4 2009-10-07 09:51:10 PDT
Note You need to log in before you can comment on or make changes to this bug.