Export DateInstance::info in a way that works on Windows

Fixes <http://webkit.org/b/30171>
fast/dom/Window/window-postmessage-clone.html fails on Windows

Reviewed by Anders Carlsson.

* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore_debug.def:
Removed the export of DateInstance::info from here.

* runtime/DateInstance.h: Use JS_EXPORTDATA to export
DateInstance::info, which is the required way of exporting data on
Windows.

Canonical link: https://commits.webkit.org/40806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49247 268f45cc-cd09-0410-ab3c-d52691b4dbfc